--- a/www/views/film/detail/filmdetail.html
+++ b/www/views/film/detail/filmdetail.html
@@ -5,5 +5,9 @@
   <ion-nav-buttons side="secondary">
     <button class="button button-clear icon-right ion-android-exit" ng-click=""></button>
   </ion-nav-buttons>
+  <ion-content>
+  	<button class="button" ng-click="data.add()">添加</button>
+  	<button class="button" ng-click="data.delete()">删除</button>
+  </ion-content>
 </ion-view>
 
